syntax = "proto3";

package learnio.user;

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/any.proto";
import "_shared.proto";

service UserService {
    rpc GetAll(GetAllRequest) returns (GetAllResponse);

    rpc GetById(GetByIdRequest) returns (UserResponse);

    rpc UpdateById(UpdateRequest) returns (UserResponse);

    rpc DeleteById(GetByIdRequest) returns (EmptyOrError);

    rpc ChangePassword(ChangePasswordRequest) returns (EmptyOrError);

    rpc ChangeImage(ChangeImageRequest) returns (EmptyOrError);

    rpc GetSettings(GetByIdRequest) returns (GetSettingsResponse);

    rpc UpdateSettings(UpdateSettingsRequest) returns (GetSettingsResponse);

    rpc ChangePermission(ChangePermissionRequest) returns (EmptyOrError);

    rpc Apply(ApplyRequest) returns (EmptyOrError);

    rpc GetRequestStatus(GetByIdRequest) returns (GetRequestStatusResponse);

    rpc GetAllRequests(GetAllRequest) returns (GetAllRequestsResponse);

    rpc Respond(GetByIdRequest) returns (EmptyOrError);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    optional string bio = 4;
    optional string image = 5;
    string permission = 6;
    bool is_activated = 7;
    // google.protobuf.Timestamp joined_at = 8;
    // google.protobuf.Timestamp updated_at = 9;
}

message Settings {
    optional bool notifications = 1;
    optional bool emails = 2;
}

message Apply {
    string id = 1;
    string details = 2;
    // google.protobuf.Any sent_at = 3;
    string status = 4;
    string response = 5;
}

message GetAllResponse {
    repeated User users = 1;
    int32 count = 2;
}

message GetByIdRequest {
    string id = 1;
}

message UpdateRequest {
    string id = 1;
    optional string name = 2;
    optional string bio = 4;
}

message UserResponse {
    oneof data {
        User user = 1;
        Error error = 2;
    }
}

message ChangePasswordRequest {
    string id = 1;
    string new_password = 2;

    oneof data {
        string password = 3;
        string reset_code = 4;
    }
}

message ChangeImageRequest {
    string id = 1;
    optional string url = 2;
}

message UpdateSettingsRequest {
    string id = 1;
    Settings settings = 2;
}

message GetSettingsResponse {
    oneof data {
        Settings settings = 1;
        Error error = 2;
    }
}

message ChangePermissionRequest {
    string id = 1;
    string permission = 2;
}

message ApplyRequest {
    string id = 1;
    string details = 2;
}

message GetRequestStatusResponse {
    oneof data {
        Apply request = 1;
        Error error = 2;
    }
}

message GetAllRequestsResponse {
    repeated GetRequestStatusResponse requests = 1;
}